--- a/cryptocurrency/mails/en/cryptocurrency.html
+++ b/cryptocurrency/mails/en/cryptocurrency.html
@@ -32,7 +32,7 @@
 <td>&nbsp;</td>
 </tr>
 <tr>
-<td align="left">You have selected to pay by cryptocurrency transfer.<br /><br />Here are the bank details for your cryptocurrency transfer: <br /><br /> <strong>Amount:</strong> {total_paid}<br /><br /> <strong>Account owner:</strong> {wallet_owner}<br /><br /> <strong>Account details:</strong><br /><br />{wallet_details}<br /><br /> <strong>Bank address:</strong> {wallet_address}</td>
+<td align="left">You have selected to pay with a cryptocurrency transaction.<br /><br />Here are the wallet details for your cryptocurrency transaction: <br /><br /> <strong>Amount:</strong> {total_paid}<br /><br /> <strong>Wallet owner:</strong> {wallet_owner}<br /><br /> <strong>Wallet details:</strong><br /><br />{wallet_details}<br /><br /> <strong>Wallet address:</strong> {wallet_address}</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
