Fixed wallet address/name
Fixed wallet address/name and several typos in the email template. Added
name of the currency on payment return and inside email of awaiting
payment.

--- a/cryptocurrency/mails/en/cryptocurrency.html
+++ b/cryptocurrency/mails/en/cryptocurrency.html
@@ -32,7 +32,7 @@
 <td>&nbsp;</td>
 </tr>
 <tr>
-<td align="left">You have selected to pay with a cryptocurrency transaction.<br /><br />Here are the wallet details for your cryptocurrency transaction: <br /><br /> <strong>Amount:</strong> {total_paid}<br /><br /> <strong>Wallet owner:</strong> {wallet_owner}<br /><br /> <strong>Wallet details:</strong><br /><br />{wallet_details}<br /><br /> <strong>Wallet address:</strong> {wallet_address}</td>
+<td align="left">You have selected to pay with a cryptocurrency transaction.<br /><br />Here are the wallet details for your cryptocurrency transaction: <br /><br /> <strong>Amount:</strong> {total_paid}<br /><br /> <strong>Wallet owner:</strong> {wallet_owner}<br /><br /> <strong>Wallet details:</strong><br /><br />{wallet_details}<br /><br /><strong>Currency name:</strong> {wallet_currency_name}<br/><br/><strong>Wallet address:</strong> {wallet_address}</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
